# 338 - Task Activity search no longer crashes on row limit filter.

--- a/web/templates/taskActivityLog.html
+++ b/web/templates/taskActivityLog.html
@@ -35,7 +35,7 @@ $var cssfiles:
         <input type="text" id="txtStopDate" class="datepicker" />
     </span>
     <span id="lblMaxRows"> # of Results
-        <input type="text" id="txtResultCount" />
+        <input type="text" id="txtResultCount" validate_as="posint" style="width: 50px;" />
     </span>
     <span id="item_search_btn">Search</span>
     <table class="jtable" cellspacing="1" cellpadding="1" width="99%">
