Improved toolbox styling.

--- a/web/templates/ecoTemplateEdit.html
+++ b/web/templates/ecoTemplateEdit.html
@@ -7,7 +7,7 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
         <div id="toolbox_tabs" class="toolbox_tabs_1row">
             <span id="tab_details" linkto="div_details" class="ui-state-default ui-corner-top ui-state-active toolbox_tab">Details</span><span id="tab_storm" linkto="div_storm" class="ui-state-default ui-corner-top toolbox_tab storm">Storm</span><span id="tab_tasks" linkto="div_tasks" class="ui-state-default ui-corner-top toolbox_tab">Tasks</span><span id="tab_ecosystems" linkto="div_ecosystems" class="ui-state-default ui-corner-top toolbox_tab">Ecosystems</span>
         </div>
-        <div id="div_details" class="toolbox_panel">
+        <div id="div_details" class="ui-widget-content ui-corner-top toolbox_panel">
             <div style="padding: 0 0 0 5px;">
                 <span class="detail_label">Name:</span>
                 <input type="text" id="txtEcoTemplateName" class="task_details code" te_group="detail_fields" column="Name" />
@@ -23,7 +23,7 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
                 </center>
             </div>
         </div>
-        <div id="div_storm" class="toolbox_panel hidden">
+        <div id="div_storm" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div style="padding: 0 0 0 5px;">
                 <img src="static/images/icons/storm_32.png" alt="" /><span class="detail_label">Storm File</span>
                 <hr />
@@ -40,7 +40,7 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
                 </center>
             </div>
         </div>
-        <div id="div_tasks" class="toolbox_panel hidden">
+        <div id="div_tasks" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div style="padding: 0 0 0 5px;">
                 <span>Search:</span>
                 <input id="task_search_text" />
@@ -48,7 +48,7 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
                 <div id="task_picker_results"></div>
             </div>
         </div>
-        <div id="div_ecosystems" class="toolbox_panel hidden">
+        <div id="div_ecosystems" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div style="padding: 0 0 0 5px;">
                 <span id="ecosystem_create_btn">New Ecosystem</span>
                 <hr />
