--- a/web/templates/ecosystemEdit.html
+++ b/web/templates/ecosystemEdit.html
@@ -9,7 +9,7 @@ $var cssfiles: taskEdit.css taskView.css ecosystemEdit.css registry.css
             id="tab_objects" linkto="div_objects" class="ui-state-default ui-corner-top toolbox_tab">Objects</span><span
             id="tab_actions" linkto="div_actions" class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active toolbox_tab">Actions</span>
         </div>
-        <div id="div_details" class="toolbox_panel hidden">
+        <div id="div_details" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div style="padding: 0 0 0 5px;">
                 <span class="detail_label">Template:</span>
                 <br />
@@ -32,14 +32,14 @@ $var cssfiles: taskEdit.css taskView.css ecosystemEdit.css registry.css
                 </center>
             </div>
         </div>
-        <div id="div_objects" class="toolbox_panel hidden">
+        <div id="div_objects" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <!-- I imagine the actions for a specific object would go here. -->
             <div id="discovery_btn" class="ui-widget-content ui-corner-all ui-state-focus action_btn pointer">
                 <img alt="" src="static/images/icons/cloud_discovery_24.png" height="48" width="48" />
                 <span>Cloud Discovery</span>
             </div>
         </div>
-        <div id="div_actions" class="toolbox_panel">
+        <div id="div_actions" class="ui-widget-content ui-corner-top toolbox_panel">
             <span class="detail_label">Select a Category:</span>
             <div id="action_categories"></div>
         </div>
