#286 - Task command help.

--- a/web/templates/taskEdit.html
+++ b/web/templates/taskEdit.html
@@ -72,7 +72,7 @@ $var cssfiles: registry.css taskEdit.css taskView.css
             </center>
         </div>
         <div id="div_commands" class="ui-widget-content ui-corner-top toolbox_panel hidden">
-            <span id="command_help_btn">Help</span>
+            <span id="command_help_btn">Command Help</span>
             <hr />
             <table border="0" width="100%">
                 <tr>
