CE hooks for EE tagging feature.

--- a/web/templates/assetEdit.html
+++ b/web/templates/assetEdit.html
@@ -78,7 +78,9 @@ $var cssfiles:
             <li>
                 <a href="#GeneralTab"><span>General</span></a>
             </li>
-            <!--<li><a href="#TagsTab"><span>Tags</span></a></li>-->
+            <!--#EE#<li>
+                <a href="#TagsTab"><span>Tags</span></a>
+            </li>#EE#-->
             <li>
                 <a href="#CredentialsTab"><span>Credentials</span></a>
             </li>
@@ -129,16 +131,11 @@ $var cssfiles:
                 <span id="show_log_link">View Change Log</span>
             </center>
         </div>
-        <!--
-        <div id="TagsTab">
-        <span id="tag_add_btn" class="tag_add_btn pointer">
-        <img src="../images/icons/edit_add.png" alt="" />
-        click to add </span>
-        <hr />
-        <ul id="objects_tags">
-        </ul>
-        </div>
-        -->
+        <!--#EE#<div id="TagsTab">
+            <span id="tag_add_btn" class="tag_add_btn pointer">Add</span>
+            <hr />
+            <ul id="objects_tags"></ul>
+        </div>#EE#-->
         <div id="CredentialsTab">
             <table id="tblCredentials" width="80%">
                 <tbody>
