--- a/web/templates/ecoTemplateEdit.html
+++ b/web/templates/ecoTemplateEdit.html
@@ -8,8 +8,8 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
             <span id="tab_details" linkto="div_details" class="ui-state-default ui-corner-top ui-state-active toolbox_tab">Details</span><span 
             id="tab_storm" linkto="div_storm" class="ui-state-default ui-corner-top toolbox_tab storm">Storm</span><span 
             id="tab_tasks" linkto="div_tasks" class="ui-state-default ui-corner-top toolbox_tab">Tasks</span><span 
-            id="tab_ecosystems" linkto="div_ecosystems" class="ui-state-default ui-corner-top toolbox_tab">Ecosystems</span><!--<span
-            id="tab_tags" linkto="div_tags" class="ui-state-default ui-corner-top toolbox_tab">Tags</span>-->
+            id="tab_ecosystems" linkto="div_ecosystems" class="ui-state-default ui-corner-top toolbox_tab">Ecosystems</span><!--#EE#<span
+            id="tab_tags" linkto="div_tags" class="ui-state-default ui-corner-top toolbox_tab">Tags</span>#EE#-->
         </div>
         <div id="div_details" class="ui-widget-content ui-corner-top toolbox_panel">
             <div style="padding: 0 0 0 5px;">
@@ -59,9 +59,9 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
                 <div id="ecosystem_results"></div>
             </div>
         </div>
-        <!--<div id="div_tags" class="ui-widget-content ui-corner-top toolbox_panel hidden">
+        <!--#EE#<div id="div_tags" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <span id="tag_add_btn" class="tag_add_btn pointer">Add</span>
-            <ul id="objects_tags"></ul>-->
+            <ul id="objects_tags"></ul>#EE#-->
         </div>
     </div>
 </div>
