--- a/web/templates/assetEdit.html
+++ b/web/templates/assetEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: assetEdit.js managePageCommon.js objectTag.js
+$var jsfiles: assetEdit.js managePageCommon.js tags.js
 $var cssfiles:
 
 <style type="text/css">
@@ -78,9 +78,9 @@ $var cssfiles:
             <li>
                 <a href="#GeneralTab"><span>General</span></a>
             </li>
-            <!--#EE#<li>
+            <li>
                 <a href="#TagsTab"><span>Tags</span></a>
-            </li>#EE#-->
+            </li>
             <li>
                 <a href="#CredentialsTab"><span>Credentials</span></a>
             </li>
@@ -131,11 +131,11 @@ $var cssfiles:
                 <span id="show_log_link">View Change Log</span>
             </center>
         </div>
-        <!--#EE#<div id="TagsTab">
+        <div id="TagsTab">
             <span id="tag_add_btn" class="tag_add_btn pointer">Add</span>
             <hr />
             <ul id="objects_tags"></ul>
-        </div>#EE#-->
+        </div>
         <div id="CredentialsTab">
             <table id="tblCredentials" width="80%">
                 <tbody>
