--- a/web/templates/ecoTemplateEdit.html
+++ b/web/templates/ecoTemplateEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js storm.js stormRunDialog.js parametersOnDialog.js ecoTemplateEdit.js objectTag.js stormEcotemplateEdit.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
+$var jsfiles: toolbox.js storm.js stormRunDialog.js parametersOnDialog.js ecoTemplateEdit.js tags.js stormEcotemplateEdit.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
 $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
 
 <div id="left_panel_te">
@@ -8,8 +8,8 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
             <span id="tab_details" linkto="div_details" class="ui-state-default ui-corner-top ui-state-active toolbox_tab">Details</span><span 
             id="tab_storm" linkto="div_storm" class="ui-state-default ui-corner-top toolbox_tab storm">Storm</span><span 
             id="tab_tasks" linkto="div_tasks" class="ui-state-default ui-corner-top toolbox_tab">Tasks</span><span 
-            id="tab_ecosystems" linkto="div_ecosystems" class="ui-state-default ui-corner-top toolbox_tab">Ecosystems</span><!--#EE#<span
-            id="tab_tags" linkto="div_tags" class="ui-state-default ui-corner-top toolbox_tab">Tags</span>#EE#-->
+            id="tab_ecosystems" linkto="div_ecosystems" class="ui-state-default ui-corner-top toolbox_tab">Ecosystems</span><span
+            id="tab_tags" linkto="div_tags" class="ui-state-default ui-corner-top toolbox_tab">Tags</span>
         </div>
         <div id="div_details" class="ui-widget-content ui-corner-top toolbox_panel">
             <div style="padding: 0 0 0 5px;">
@@ -59,9 +59,9 @@ $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
                 <div id="ecosystem_results"></div>
             </div>
         </div>
-        <!--#EE#<div id="div_tags" class="ui-widget-content ui-corner-top toolbox_panel hidden">
+        <div id="div_tags" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <span id="tag_add_btn" class="tag_add_btn pointer">Add</span>
-            <ul id="objects_tags"></ul>#EE#-->
+            <ul id="objects_tags"></ul>
         </div>
     </div>
 </div>
