Import page now has a 'Load' button for the URL field.

--- a/web/templates/importObject.html
+++ b/web/templates/importObject.html
@@ -12,7 +12,8 @@ $var cssfiles:
             <iframe src="static/pages/file_upload.html?ref_id=import" style="width: 100%; height: 28px;"></iframe>
             Enter a URL:
             <br />
-            <input type="text" class="w100pct code" id="import_from_url" />
+            <input type="text" class="w90pct code" id="import_from_url" />
+            <button id="url_load_btn" class="ui-widget ui-state-default ui-corner-all ui-button-text-only" style="margin-top: -10px; font-weight: normal; font-size: 10pt;">Load</button>
             <hr />
             <textarea id="xml_to_import" class="w100pct code" rows="24"></textarea>
             <span id="format_xml_btn">Format</span><span id="import_xml_btn">Import</span>
