#262 Getting Started complete.  Fixed a misreporting of "content not available".

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -13,8 +13,8 @@ $var cssfiles:
 <div id="fullwidthcontent">
     <div id="pnlGettingStarted">
         <div id="getting_started" class="ui-widget-content ui-corner-all">
-            <h1>Welcome to Cloud Sidekick Cato!</h1>
-            <p>
+            <h1 style="text-align: center;">Welcome to Cloud Sidekick Cato!</h1>
+            <p id="getting_started_message" class="hidden" style="text-align: center;">
                 There are just a few more things you need to do to get started.
             </p>
             <div id="getting_started_items"></div>
