--- a/web/templates/popup.html
+++ b/web/templates/popup.html
@@ -25,8 +25,8 @@ $def with (content)
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
         <link type="text/css" href="static/style/tipTip.css" rel="stylesheet" />
         <!--jQuery -->
-        <script type="text/javascript" src="static/script/jquery/jquery-1.6.1.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery-ui-1.8.12.js"></script>
+        <script type="text/javascript" src="static/script/jquery/jquery-1.7.2.min.js"></script>
+        <script type="text/javascript" src="static/script/jquery/jquery-ui-1.8.21.min.js"></script>
         <!-- Plugins -->
         <script type="text/javascript" src="static/script/jquery/jquery.blockUI.js"></script>
         <script type="text/javascript" src="static/script/jquery/jquery.textarea.js"></script>
