Codeblock hover drop down button now styled properly.

--- a/web/templates/taskEdit.html
+++ b/web/templates/taskEdit.html
@@ -170,7 +170,8 @@ $var cssfiles: registry.css taskEdit.css taskView.css
             <div class="step_section_title">
                 <span id="step_toggle_all_btn" class="ui-state-default ui-corner-all ui-icon ui-icon-triangle-2-n-s forceinline step_toggle_all_btn pointer"
                 title="Expand/Collapse All Steps"></span><span
-                id="codeblock_steps_title" class="step_title"></span><span id="codeblock_selector_btn"></span>
+                id="codeblock_steps_title" class="step_title"></span>
+                <span id="codeblock_selector_btn" class="ui-state-default ui-corner-all ui-icon ui-icon-circle-triangle-s forceinline"></span>
                 <div id="codeblock_selector" class="ui-widget-content ui-corner-bottom hidden">
                     <ul id="codeblocks"></ul>
                     <center>
