--- a/web/templates/taskManage.html
+++ b/web/templates/taskManage.html
@@ -30,7 +30,7 @@ $var cssfiles:
     </div>
 </div>
 <div id="content">
-    <span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn"></span><span
+    <span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn">&nbsp;</span><span
     id="item_create_btn">Create</span><span id="item_copy_btn">Copy</span><span
     id="item_export_btn">Export</span><span id="item_delete_btn">Delete</span>
     <input type="text" id="txtSearch" class="search_text" />
