--- a/web/templates/userEdit.html
+++ b/web/templates/userEdit.html
@@ -35,7 +35,7 @@ $var cssfiles:
     </div>
 </div>
 <div id="content">
-    <span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn"></span>
+    <span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn">&nbsp;</span>
     <span id="item_create_btn">Create</span>
     <span id="item_copy_btn">Copy</span>
     <span id="item_modify_btn">Modify</span>
