Fixed DOCTYPE and content declarations for HTML5 and to avoid quirks mode on IE.

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -16,10 +16,9 @@ $def with (content)
 //limitations under the License.
 //
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head id="Head1">
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="content-style-type" content="text/css" />
+        <meta charset=utf-8 />
         <title>Cato - Cloud Sidekick</title>
         <link rel="shorcut icon" href="static/images/favicon.ico" />
         <!-- Imp CSS -->
