--- a/web/templates/popup.html
+++ b/web/templates/popup.html
@@ -1,4 +1,5 @@
 $def with (content) 
+<!DOCTYPE html>
 <!--
 //Copyright 2012 Cloud Sidekick
 //
@@ -15,11 +16,9 @@ $def with (content)
 //limitations under the License.
 //
 -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head id="Head1">
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="content-style-type" content="text/css" />
+        <meta charset=utf-8 />
         <title>Cato - Cloud Sidekick</title>
         <link rel="icon" href="static/images/favicon.ico" />
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
