#335 - "Set Default" fixed several bugs, now works as expected.

--- a/web/templates/taskEdit.html
+++ b/web/templates/taskEdit.html
@@ -64,7 +64,7 @@ $var cssfiles: registry.css taskEdit.css taskView.css
             <span class="detail_label">Status: </span>
             <span id="lblStatus2" class="code"></span>
             <br />
-            <span id="approve_btn">Approve</span>
+            <span id="approve_btn">Approve</span><span id="set_default_btn">Set as Default</span>
             <hr />
             <span class="detail_label">All Versions:</span>
             <ul id="versions"></ul>
