--- a/web/templates/taskEdit.html
+++ b/web/templates/taskEdit.html
@@ -312,7 +312,7 @@ $var cssfiles: registry.css taskEdit.css taskView.css
     <p>
         Are you sure you wish to Approve this Version?
     </p>
-    <p style="text-align: center;">
+    <p id="make_default_chk" style="text-align: center;">
         <input type="checkbox" id="chkMakeDefault" />
         <label for="chkMakeDefault">Mark as the 'Default' Version?</label>
     </p>
