cosmetics - the home page now has a Cato logo once all the Getting Started items are done.

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -4,20 +4,23 @@ $var cssfiles:
 
 <style type="text/css">
 	#getting_started {
-		padding:20px;
-		width:500px;
-		margin-left:auto;
-		margin-right:auto;
+		padding: 20px;
+		width: 500px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 </style>
 <div id="fullwidthcontent">
-    <div id="pnlGettingStarted">
-        <div id="getting_started" class="ui-widget-content ui-corner-all">
-            <h1 style="text-align: center;">Welcome to Cloud Sidekick Cato!</h1>
-            <p id="getting_started_message" class="hidden" style="text-align: center;">
-                There are just a few more things you need to do to get started.
-            </p>
-            <div id="getting_started_items"></div>
-        </div>
-    </div>
+	<div id="pnlGettingStarted">
+		<div id="getting_started" class="ui-widget-content ui-corner-all" style="box-shadow: 2px 2px 5px #555;">
+			<h1 style="text-align: center;">Welcome to Cloud Sidekick Cato!</h1>
+			<p id="getting_started_message" class="hidden" style="text-align: center;">
+				There are just a few more things you need to do to get started.
+			</p>
+			<p id="getting_started_img" class="hidden" style="text-align: center;">
+				<img alt="" src="static/images/cato_centerpiece.jpg" style="text-align: center;">
+			</p>
+			<div id="getting_started_items"></div>
+		</div>
+	</div>
 </div>
