#287 - paging enabled on manage pages.

--- a/web/templates/assetEdit.html
+++ b/web/templates/assetEdit.html
@@ -71,6 +71,7 @@ $var cssfiles:
         </thead>
         <tbody id="assets"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Asset">
     <div id="AddAssetTabs" style="height: 500px;">
