--- a/web/templates/ecosystemManage.html
+++ b/web/templates/ecosystemManage.html
@@ -51,6 +51,7 @@ $var cssfiles:
         </thead>
         <tbody id="ecosystems"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="New Ecosystem">
     <table width="100%">
