--- a/web/templates/cloudAccountEdit.html
+++ b/web/templates/cloudAccountEdit.html
@@ -70,6 +70,7 @@ $var cssfiles:
         </thead>
         <tbody id="accounts"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Account">
     <div id="edit_dialog_tabs">
