--- a/web/templates/cloudEdit.html
+++ b/web/templates/cloudEdit.html
@@ -51,6 +51,7 @@ $var cssfiles:
         </thead>
         <tbody id="clouds"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Cloud">
     <table width="100%">
