--- a/web/templates/credentialEdit.html
+++ b/web/templates/credentialEdit.html
@@ -55,6 +55,7 @@ $var cssfiles:
         </thead>
         <tbody id="credentials"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Credential">
     <table width="100%">
