--- a/web/templates/ecoTemplateManage.html
+++ b/web/templates/ecoTemplateManage.html
@@ -50,6 +50,7 @@ $var cssfiles:
         </thead>
         <tbody id="ecotemplates"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="New Ecosystem Template">
     <table width="100%">
