--- a/web/templates/userEdit.html
+++ b/web/templates/userEdit.html
@@ -57,6 +57,7 @@ $var cssfiles:
         </thead>
         <tbody id="users"></tbody>
     </table>
+	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Add New User">
     <div id="AddUserTabs">
