Better processing of EE includes, so there aren't 404 script errors.

--- a/web/templates/ecoTemplateEdit.html
+++ b/web/templates/ecoTemplateEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js storm.js stormRunDialog.js parametersOnDialog.js ecoTemplateEdit.js tags.js stormEcotemplateEdit.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
+$var jsfiles: toolbox.js parametersOnDialog.js ecoTemplateEdit.js tags.js stormEcotemplateEdit.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
 $var cssfiles: taskEdit.css taskView.css ecoTemplateEdit.css
 
 <div id="left_panel_te">
