--- a/web/templates/ecoTemplateManage.html
+++ b/web/templates/ecoTemplateManage.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: managePageCommon.js ecoTemplateManage.js stormEcotemplateManage.js storm.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
+$var jsfiles: managePageCommon.js ecoTemplateManage.js stormEcotemplateManage.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
 $var cssfiles:
 
 <div style="display: none;">
