--- a/web/templates/ecosystemEdit.html
+++ b/web/templates/ecosystemEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js storm.js stormRunDialog.js ecosystemEdit.js parametersOnDialog.js taskLaunchDialog.js stormStopDialog.js registry.js taskedit/taskEditParams.js
+$var jsfiles: toolbox.js ecosystemEdit.js parametersOnDialog.js taskLaunchDialog.js registry.js taskedit/taskEditParams.js
 $var cssfiles: taskEdit.css taskView.css ecosystemEdit.css registry.css
 
 <div id="left_panel_te">
