#163 - key pairs moved from cloud account to cloud.

--- a/web/templates/cloudEdit.html
+++ b/web/templates/cloudEdit.html
@@ -2,6 +2,21 @@ $def with ()
 $var jsfiles: managePageCommon.js cloudEdit.js
 $var cssfiles:
 
+<style type="text/css">
+	.keypair {
+		clear: both;
+		height: 18px;
+		margin: 1px 2px 1px 4px;
+		padding: 1px;
+	}
+	.keypair_label {
+		float: left;
+	}
+	.keypair_icons {
+		float: right;
+	}
+</style>
+
 <div style="display: none;">
 	<input id="hidMode" type="hidden" />
 	<input id="hidCurrentEditID" type="hidden" />
@@ -58,45 +73,92 @@ $var cssfiles:
 	<div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Cloud">
-	<table width="100%">
-		<tr>
-			<td> Cloud Name: </td>
-			<td>
-			<input id="txtCloudName" class="usertextbox" name="txtCloudName" />
-			</td>
-		</tr>
-		<tr>
-			<td> Provider: </td>
-			<td><select id="ddlProvider"></select></td>
-		</tr>
-		<tr>
-			<td> API Protocol: </td>
-			<td>
-			<select id="ddlAPIProtocol">
-				<option value="HTTPS">HTTPS</option>
-				<option value="HTTP">HTTP</option>
-			</select></td>
-		</tr>
-		<tr>
-			<td> API URL: </td>
-			<td>
-			<input id="txtAPIUrl" class="usertextbox" name="txtAPIUrl" />
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
+	<div id="edit_dialog_tabs">
+		<ul>
+			<li>
+				<a href="#DetailTab"><span>Cloud</span></a>
+			</li>
+			<li>
+				<a href="#KeyPairTab"><span>Key Pairs</span></a>
+			</li>
+		</ul>
+		<div id="DetailTab" style="height: 340px;">
+			<table width="100%">
+				<tr>
+					<td> Cloud Name: </td>
+					<td>
+					<input id="txtCloudName" class="usertextbox" name="txtCloudName" />
+					</td>
+				</tr>
+				<tr>
+					<td> Provider: </td>
+					<td><select id="ddlProvider"></select></td>
+				</tr>
+				<tr>
+					<td> API Protocol: </td>
+					<td>
+					<select id="ddlAPIProtocol">
+						<option value="HTTPS">HTTPS</option>
+						<option value="HTTP">HTTP</option>
+					</select></td>
+				</tr>
+				<tr>
+					<td> API URL: </td>
+					<td>
+					<input id="txtAPIUrl" class="usertextbox" name="txtAPIUrl" />
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2">
+					<hr />
+					</td>
+				</tr>
+				<tr>
+					<td> Default Account: </td>
+					<td><select id="ddlDefaultAccount"></select><span id="jumpto_account_btn" title="Edit Account">&nbsp;</span><span class="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_account_btn" title="Add an Account">&nbsp;</span></td>
+				</tr>
+				<tr>
+					<td colspan="2"><div id="conn_test_result" style="margin-top: 10px;"></div><div id="conn_test_error" style="font-size: 0.8em; font-style: italic; margin-top: 10px;"></div></td>
+				</tr>
+			</table>
+		</div>
+		<div id="KeyPairTab">
+			<span style="font-style: italic;">(Changes to Key Pairs are saved automatically, and
+				cannot be undone.)</span>
 			<hr />
-			</td>
-		</tr>
-		<tr>
-			<td> Default Account: </td>
-			<td><select id="ddlDefaultAccount"></select><span id="jumpto_account_btn" title="Edit Account">&nbsp;</span><span class="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_account_btn" title="Add an Account">&nbsp;</span></td>
-		</tr>
-		<tr>
-			<td colspan="2"><div id="conn_test_result" style="margin-top: 10px;"></div><div id="conn_test_error" style="font-size: 0.8em; font-style: italic; margin-top: 10px;"></div></td>
-		</tr>
-	</table>
+			<span id="keypair_add_btn">Add</span>
+			<hr />
+			<div id="keypairs"></div>
+		</div>
+	</div>
 </div>
 <div id="delete_dialog" class="hidden" title="Delete Clouds">
 	Are you sure you want to delete these Clouds?
+</div>
+<div id="keypair_dialog" class="hidden" title="Key Pair">
+	<table width="100%">
+		<tr>
+			<td> Name: </td>
+		</tr>
+		<tr>
+			<td>
+			<input id="keypair_name" name="keypair_name" class="usertextbox" type="text" />
+			</td>
+		</tr>
+		<tr>
+			<td> Private Key: </td>
+		</tr>
+		<tr>
+			<td>			<textarea id="keypair_private_key" name="keypair_private_key" rows="3" cols="40"></textarea></td>
+		</tr>
+		<tr>
+			<td> Passphrase: </td>
+		</tr>
+		<tr>
+			<td>
+			<input id="keypair_passphrase" name="keypair_passphrase" class="usertextbox" type="password" />
+			</td>
+		</tr>
+	</table>
+	<input type="hidden" id="keypair_id" />
 </div>
